# gshellx

./: .gitignore  LICENSE  README.md  pyproject.toml  t
gshellx/: config.py  main.py  openai_api.py  prompts.py  shell_utils.py
