[tool.poetry]
name = "gshellx"
version = "0.1.0"
description = "Python CLI app for generating shell commands with OpenAI's GPT-3.5-turbo model"
authors = ["Tomer  <chaim.tomer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0"
rich = "^13.3.5"
pytest = "^7.3.1"
requests = "^2.31.0"
click = "^8.1.3"
prompt-toolkit = "^3.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gsx = 'gshellx.main:main'